[package]
name = "ct_reconstruction"
version = "0.1.0"
edition = "2024"
description = "GUI for neutron CT reconstruction on VENUS and MARS (white beam and TOF workflows)"

[dependencies]
chrono = "0.4"
eframe = "0.35"
egui = "0.35"
egui_plot = "0.36"
hdf5-metno = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
rfd = "0.17"
serde_json = "1.0"
sha2 = "0.10"
tiff = "0.11"
